Adjusted process parameter and use of options

--- a/src/backend/BotBattle.Api/appsettings.json
+++ b/src/backend/BotBattle.Api/appsettings.json
@@ -6,10 +6,22 @@
     }
   },
   "AllowedHosts": "*",
-  "PathToLobbyServerExecutable": "C:\\Users\\dmkk3r\\source\\repos\\bot-battle\\src\\backend\\BotBattle.LobbyServer\\bin\\Debug\\net8.0\\BotBattle.LobbyServer.exe",
-  "MaximumConcurrentLobbies": 6,
-  "ArenaDimensions": [
-    100,
-    100
-  ]
+  "Matchmaking": {
+    "PathToLobbyServerExecutable": "C:\\Users\\Dominikk\\source\\repos\\bot-battle\\src\\backend\\BotBattle.LobbyServer\\bin\\Debug\\net8.0\\BotBattle.LobbyServer.exe",
+    "MaximumConcurrentLobbies": 6,
+    "ArenaDimensions": [40, 20],
+    "RoundDuration": 100,
+    "AvailablePlayers": [
+      "Dominik",
+      "Matthias",
+      "Martin",
+      "Jonathan",
+      "Julien",
+      "Stefan",
+      "Elias",
+      "Dina",
+      "Christopher",
+      "Hermann"
+    ]
+  }
 }
