New lobby builder for frontend

--- a/src/backend/BotBattle.Api/appsettings.json
+++ b/src/backend/BotBattle.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Matchmaking": {
-    "PathToLobbyServerExecutable": "C:\\Users\\Dominikk\\source\\repos\\bot-battle\\src\\backend\\BotBattle.LobbyServer\\bin\\Debug\\net8.0\\BotBattle.LobbyServer.exe",
+    "PathToLobbyServerExecutable": "C:\\Users\\dmkk3r\\source\\repos\\bot-battle\\src\\backend\\BotBattle.LobbyServer\\bin\\Debug\\net8.0\\BotBattle.LobbyServer.exe",
     "MaximumConcurrentLobbies": 6,
     "ArenaDimensions": [40, 20],
     "RoundDuration": 100,
