--- a/src/backend/BotBattle.Api/appsettings.json
+++ b/src/backend/BotBattle.Api/appsettings.json
@@ -5,7 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Kestrel": {
+    "Endpoints": {
+      "MyHttpEndpoint": {
+        "Url": "http://localhost:5199"
+      }
+    }
+  },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BotBattleSqlite": "Data Source=botbattle.db"
+  },
   "Matchmaking": {
     "PathToLobbyServerExecutable": "C:\\Users\\dmkk3r\\source\\repos\\bot-battle\\src\\backend\\BotBattle.LobbyServer\\bin\\Debug\\net8.0\\BotBattle.LobbyServer.exe",
     "MaximumConcurrentLobbies": 6,
