--- a/src/backend/BotBattle.Engine/BotBattle.Engine.csproj
+++ b/src/backend/BotBattle.Engine/BotBattle.Engine.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MessagePack.Annotations" Version="2.5.172" />
         <PackageReference Include="SimplexNoise" Version="2.0.0"/>
     </ItemGroup>
 
