--- a/src/backend/BotBattle.Tests/BotBattle.Tests.csproj
+++ b/src/backend/BotBattle.Tests/BotBattle.Tests.csproj
@@ -21,7 +21,18 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\BotBattle.AgentRunner\BotBattle.AgentRunner.csproj" />
         <ProjectReference Include="..\BotBattle.Engine\BotBattle.Engine.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Resources\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="Resources\BotBattle.Agent.wasm">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
