--- a/src/backend/BotBattle.Engine/BotBattle.Engine.csproj
+++ b/src/backend/BotBattle.Engine/BotBattle.Engine.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Agent\BotBattle.AgentRunner\BotBattle.AgentRunner.csproj" />
       <ProjectReference Include="..\BotBattle.Core\BotBattle.Core.csproj" />
     </ItemGroup>
 
