--- a/src/backend/BotBattle.Tests/BotBattle.Tests.csproj
+++ b/src/backend/BotBattle.Tests/BotBattle.Tests.csproj
@@ -21,6 +21,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Agent\BotBattle.AgentLib\BotBattle.AgentLib.csproj" />
+        <ProjectReference Include="..\Agent\BotBattle.AgentRunner\BotBattle.AgentRunner.csproj" />
         <ProjectReference Include="..\BotBattle.AgentRunner\BotBattle.AgentRunner.csproj" />
         <ProjectReference Include="..\BotBattle.Engine\BotBattle.Engine.csproj"/>
     </ItemGroup>
