--- a/src/backend/BotBattle.Tests/BotBattle.Tests.csproj
+++ b/src/backend/BotBattle.Tests/BotBattle.Tests.csproj
@@ -21,9 +21,9 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Agent\BotBattle.Agent.Default\BotBattle.Agent.Default.csproj" />
         <ProjectReference Include="..\Agent\BotBattle.AgentLib\BotBattle.AgentLib.csproj" />
         <ProjectReference Include="..\Agent\BotBattle.AgentRunner\BotBattle.AgentRunner.csproj" />
-        <ProjectReference Include="..\BotBattle.AgentRunner\BotBattle.AgentRunner.csproj" />
         <ProjectReference Include="..\BotBattle.Engine\BotBattle.Engine.csproj"/>
     </ItemGroup>
 
