Agent.Default publishing adjusted

--- a/src/backend/Agent/BotBattle.Agent.Default/BotBattle.Agent.Default.csproj
+++ b/src/backend/Agent/BotBattle.Agent.Default/BotBattle.Agent.Default.csproj
@@ -6,6 +6,9 @@
         <Nullable>enable</Nullable>
         <RuntimeIdentifier>wasi-wasm</RuntimeIdentifier>
         <OutputType>Exe</OutputType>
+        <PublishTrimmed>true</PublishTrimmed>
+        <WasmSingleFileBundle>true</WasmSingleFileBundle>
+        <TrimMode>full</TrimMode>
     </PropertyGroup>
 
     <ItemGroup>
