--- a/sample/botbattle_agent_rust/Cargo.toml
+++ b/sample/botbattle_agent_rust/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 extism-pdk = "1.2.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.127"
+base64 = "0.20.0"
+hex = "0.4"
 
 [lib]
 crate-type = ["cdylib"]
