--- a/sample/botbattle_agent_rust/Cargo.toml
+++ b/sample/botbattle_agent_rust/Cargo.toml
@@ -9,6 +9,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.127"
 base64 = "0.20.0"
 hex = "0.4"
+serde_repr = "0.1"
 
 [lib]
 crate-type = ["cdylib"]
