Account page with wasm upload

--- a/src/backend/BotBattle.Api/appsettings.json
+++ b/src/backend/BotBattle.Api/appsettings.json
@@ -18,6 +18,7 @@
   },
   "Matchmaking": {
     "PathToLobbyServerExecutable": "C:\\Users\\dmkk3r\\source\\repos\\bot-battle\\src\\backend\\BotBattle.LobbyServer\\bin\\Debug\\net8.0\\BotBattle.LobbyServer.exe",
+    "PathToUserWasm": "C:\\tmp\\botbattle",
     "MaximumConcurrentLobbies": 6,
     "ArenaDimensions": [
       40,
