--- a/src/backend/Agent/BotBattle.AgentLib/BotBattle.AgentLib.csproj
+++ b/src/backend/Agent/BotBattle.AgentLib/BotBattle.AgentLib.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\BotBattle.Core\BotBattle.Core.csproj" />
     </ItemGroup>
 
 </Project>
